fix: set the body text align from locale

--- a/app/style/base.scss
+++ b/app/style/base.scss
@@ -32,8 +32,6 @@
 body {
     overflow: auto;
     overflow-x: hidden;
-
-    text-align: right;
 }
 
 html,
